feat: api + dashboard wip
